force-app/main/default/objects/Account/fields/Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>Available_Credit__c</fullName>
    <description>Headroom a new order can still consume: credit limit minus current exposure. Calculated so it can never disagree with the two values it derives from; a missing limit or exposure counts as zero.</description>
    <formula>Credit_Limit__c - Current_Exposure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>