force-app/main/default/objects/Account/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <description>Maximum total amount the credit service authorizes this account to owe at any moment. Written by the credit integration, not by sales users.</description>
    <label>Credit Limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>