force-app/main/default/objects/Account/fields/Current_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Current_Exposure__c</fullName>
    <description>Amount already committed by this account in open orders and unpaid invoices, as reported by the ERP on the last synchronization. Compare with Last ERP Sync before trusting it.</description>
    <label>Current Exposure</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>