force-app/main/default/objects/Account/fields/ERP_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Customer_Id__c</fullName>
    <description>Customer key owned by the ERP. Integration jobs upsert accounts on this field, so it is the idempotency key of the whole ERP sync: a duplicate or hand-edited value silently creates or overwrites the wrong account.</description>
    <externalId>true</externalId>
    <label>ERP Customer Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>