force-app/main/default/objects/Account/fields/Last_ERP_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_ERP_Sync__c</fullName>
    <description>Moment the last successful ERP synchronization finished for this account. Used to detect stale credit and exposure data and to decide whether a fresh check is needed before an order.</description>
    <label>Last ERP Sync</label>
    <type>DateTime</type>
</CustomField>