force-app/main/default/objects/Account/fields/Primary_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Territory_Code__c</fullName>
    <description>Code of the territory that owns this account for assignment and quota roll-up. Kept as a code rather than a lookup so ERP-driven loads do not need to resolve a Salesforce record first.</description>
    <label>Primary Territory Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>