force-app/main/default/objects/Account/fields/Strategic_Account__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Account__c</fullName>
    <description>Marks an account under executive sponsorship. Such accounts are held out of automated dormancy, reassignment and mass-notification routines.</description>
    <defaultValue>false</defaultValue>
    <label>Strategic Account</label>
    <type>Checkbox</type>
</CustomField>